--- a/index.html
+++ b/index.html
@@ -8,73 +8,7 @@
   <title> bootstrapmode clone </title>
 </head>
 <body>
-  <!-- <header id="header">
-    <div class="logo">
-      <a href="https://bootstrapmade.com" rel="home" title="free bootstrap themes and website tamplets">
-        <img src="	https://bootstrapmade.com/assets/img/logo.png" alt="bootstrapmade">
-        <strong>
-          bootstrap
-          <span>made</span>
-        </strong>
-      </a>
-    </div>
-    <div class="prevew-device">
-      <ul>
-        <li class="preview-test preview-device-active id="preview-test-desktop title="resrurent preview of the
-         resturently templete">
-        <a href=>
-          <svg class="icon icon-preview" fill="cerrentColor">
-            <use xlink:href="">
-              
-            </use>
-          </svg>
-        </a>
-        </li>
-        <li class="preview-test id="preview-test-tablet title="tablet preview of the resturently templete">
-          <a href>
-            <svg class="icon icon-tablet" fill="currentColor">
-              <use xlink:href=""></use>
-            </svg>
-          </a>
-        </li>
-        <li class="preview-test id="preview-test-mobile title="mobile preview of the resturently template ">
-          <a href>
-            <svg class="icon icon-smartphone" fill="currentColor">
-              <use xlink:href></use>
-          </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="currenttemplets">
-      <a href="" title="next templet: mentor" target="_top">
-        <svg class="icon icon-chevron-left" fill="currentColor">
-          <use xlink:href></use>
-        </svg>
-      </a>
-      <a class="tamplethome" href="" title="resturently tamplets home page">
-        resturently
-      </a>
-      <a href="" title="next :template mentor" target="_top">
-        <svg class="icon icon-chevron-right" fill="current-Color">
-          <use xlink:href></use>
-        </svg>        
-      </a>
-    </div>
-    <div class="navigate">
-      <a href="" target="_top" title="hide the demo bar">
-        <svg class="icon-icon-external-link" fill="currentColor">
-          <use xlink:href></use>
-        </svg>
-      </a>
-      <a class="download" href="" title="download the restruntly templete">
-        <svg class="icon icon-download" fill="currentColor">
-          <use xlink:href></use>
-        </svg>
-       <span>free download</span>
-      </a>
-    </div>
-  </header> -->
+ <div class=""></div>
   <div class="header">
     <img class="img" src="./newfolder/bbbbbbbbbbbbbb.jfif" alt="bootstrapmade" height="19" width="19">
       <strong class="text1">BOOTSTRAP<span class="text">MADE</span></strong>
